--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.86"
 onvif = { git = "https://github.com/lumeohq/onvif-rs", rev = "1b1e6fd" }
 recording = { git = "https://github.com/lumeohq/onvif-rs", rev = "1b1e6fd" }
 replay = { git = "https://github.com/lumeohq/onvif-rs", rev = "1b1e6fd" }
