--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ recording = { git = "https://github.com/lumeohq/onvif-rs", rev = "1b1e6fd" }
 replay = { git = "https://github.com/lumeohq/onvif-rs", rev = "1b1e6fd" }
 search = { git = "https://github.com/lumeohq/onvif-rs", rev = "1b1e6fd" }
 schema = { git = "https://github.com/lumeohq/onvif-rs", rev = "1b1e6fd" }
+onvif-xsd = { git = "https://github.com/lumeohq/onvif-rs", rev = "1b1e6fd" }
 xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
@@ -21,3 +22,9 @@ log = "0.4.22"
 serde = "1.0.207"
 pretty_env_logger = "0.5.0"
 reqwest = "0.12.7"
+teloxide = { version = "0.13", features = ["macros"] }
+dotenv = "0.15.0"
+futures-util = "0.3.30"
+tracing-subscriber = "0.3.18"
+chrono = "0.4.38"
+rusqlite = { version = "0.32.1", features = ["bundled"] }
